<resources>
    <string name="app_name">Desbravador</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tela_inicial">tela_inicial</string>

    <!-- Botão -->
    <string name="confirmar">Confirmar</string>"
    <string name="entrar">Entrar</string>"
    <string name="criar_conta">Criar Conta</string>"
    <string name="curitr">Curtir</string>"

    <!-- Login -->

    <string name="login">Login</string>"

    <!-- Cadastro -->
    <string name="cadastre_se">Cadastre-se</string>
    <string name="nome">Nome</string>
    <string name="email">E-mail</string>
    <string name="email_confimar">Confirme seu e-mail</string>
    <string name="senha">Senha</string>
    <string name="senha_confirmar">Confirme sua senha</string>

    <string name="inicio">InÍcio</string>
    <string name="curtidas">Curtidas</string>
    <string name="qrcode">QR Code</string>
    <string name="telefones">Telefones</string>
    <string name="telefones_uteis">Telefones Úteis</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="title_activity_teste_maps">TesteMaps</string>
    <string name="local">Local</string>
    <string name="telefoneteste">(47) 3352-8330</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="clique">Clique</string>

    <string name="natureza">Natureza</string>
    <string name="gastronomia">Gastronomia</string>
    <string name="conta">Conta</string>
    <string name="sair">Sair</string>

</resources>