<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    android:layout_marginBottom="20dp"
    android:background="@color/white"
    tools:context=".fragment.FragmentLogin">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:background="@color/white"
        android:textAlignment="center">

        <TextView
            android:id="@+id/txt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/login"
            android:textColor="@color/cor_text_verde_escuro"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtemaillogina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColorHint="@color/teal_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_login">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_email_login"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/botao_borda_verde_radius"
                android:hint="@string/email"
                android:textAlignment="viewStart"
                android:textColor="@color/cor_text_verde_escuro"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtsenhalogina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColorHint="@color/teal_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtemaillogina">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_senha_login"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginVertical="20dp"
                android:background="@drawable/botao_borda_verde_radius"
                android:hint="@string/senha"
                android:inputType="textPassword"
                android:textAlignment="viewStart"
                android:textColor="#023D21"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_entrar_login"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="50dp"
            android:background="@drawable/gradiente_verde"
            android:text="@string/entrar"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtsenhalogina" />

        <Button
            android:id="@+id/btn_criar_conta"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:background="@drawable/gradiente_verde"
            android:onClick="abrirCadastro"
            android:text="@string/criar_conta"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/btn_entrar_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_entrar_login" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>